serve logo as a static file

--- a/pastebin/guest/templates/base.html
+++ b/pastebin/guest/templates/base.html
@@ -4,9 +4,9 @@
     <!-- Required meta tags -->
     
     {% block meta %}
-        
+    
     {% endblock meta %}
-        
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,7 +15,7 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-sm navbar-light bg-light">
-          <a class="navbar-brand" href="#">Pastebin</a>
+          <a class="navbar-brand" href="#"> <img src="{% static 'images/logo.png' %}" style="height: 40px;"> </a>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
