--- a/pastebin/user/templates/user_base.html
+++ b/pastebin/user/templates/user_base.html
@@ -22,9 +22,12 @@
           </button>
           <div class="collapse navbar-collapse" id="collapsibleNavId">
               <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                  <li class="nav-item active">
-                      <a class="nav-link" href="{% url 'homepage' %}">Home</a>
-                  </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="{% url 'homepage' %}">Home</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="{% url 'user_new_post' %}">New Post</a>
+                </li>
               </ul>
           </div>
       </nav>
