--- a/pastebin/user/templates/user_new_post.html
+++ b/pastebin/user/templates/user_new_post.html
@@ -19,6 +19,11 @@
     </div>
 {% endblock content %}
 
-    
-    
-    
+
+{% block footer %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+<script>
+    var simplemde = new SimpleMDE({ element: document.getElementById("id_body") });
+</script>
+{% endblock footer %}
