--- a/pastebin/user/templates/user_new_post.html
+++ b/pastebin/user/templates/user_new_post.html
@@ -24,6 +24,11 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 <script>
-    var simplemde = new SimpleMDE({ element: document.getElementById("id_body") });
+    document.getElementById('id_body').removeAttribute('required');
+    var simplemde = new SimpleMDE({ 
+            element: document.getElementById("id_body"),
+            spellChecker: false,
+        }
+    );
 </script>
 {% endblock footer %}
