--- a/pastebin/user/templates/user_home.html
+++ b/pastebin/user/templates/user_home.html
@@ -24,6 +24,10 @@
                         {% else %}
                         <span class="badge badge-danger">Private</span>
                         {% endif %}
+
+                        <a href="{% url 'user_delete_post' id=d.id %}" style="float:right;" onclick="return confirm('Do you want to delete this item?')">
+                            <span class="fa fa-trash text-danger"></span>
+                        </a>
                     </button>
                 </h2>
             </div>
