--- a/pastebin/user/templates/user_base.html
+++ b/pastebin/user/templates/user_base.html
@@ -29,6 +29,9 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="{% url 'user_new_post' %}">New Post</a>
                 </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
               </ul>
           </div>
       </nav>
