--- a/pastebin/guest/templates/base.html
+++ b/pastebin/guest/templates/base.html
@@ -28,6 +28,12 @@
                   <li class="nav-item">
                       <a class="nav-link" href="{% url 'aboutpage' %}">About</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                  </li>
               </ul>
           </div>
       </nav>
