--- a/pastebin/guest/templates/base.html
+++ b/pastebin/guest/templates/base.html
@@ -30,6 +30,9 @@
                       <a class="nav-link" href="{% url 'aboutpage' %}">About</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="{% url 'search' %}">Search</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
                   </li>
                   <li class="nav-item">
