--- a/pastebin/guest/templates/search.html
+++ b/pastebin/guest/templates/search.html
@@ -7,8 +7,8 @@
 {% block content %}
     <div class="container-fluid" id="search">
         <h1 class="text-center mb-5">Search public posts</h1>
-        <form method="get" class="d-flex">
-            <input type="search" class="form-control mr-5" name="s" id="s" required placeholder="Enter title">
+        <form method="get" class="d-flex" onsubmit="return validate()" name="search-form">
+            <input type="search" class="form-control mr-5" name="s" id="s" placeholder="Enter title">
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
     </div>
@@ -19,5 +19,21 @@
     {% endif %}
         
 {% endblock content %}
+
+
+{% block footer %}
+    <script>
+        function validate(){
+            var data = document.forms['search-form']['s'].value;
+            if(data.length == 0){
+                swal( "Oops" ,  "Please type something in the search box." ,  "error");
+                return false;
+            }
+            else{
+                return true;
+            }
+        }
+    </script>
+{% endblock footer %}
     
     
