--- a/pastebin/guest/templates/search.html
+++ b/pastebin/guest/templates/search.html
@@ -14,9 +14,15 @@
     </div>
 
     
+<section id="search-result">
     {% if message %}
-        {{ message }}
+        <div class="container">
+            <div class="alert alert-danger text-center">
+                <b>{{ message }}</b>
+            </div>
+        </div>
     {% endif %}
+</section>
         
 {% endblock content %}
 
