Render post page in server-side using markdown library
Run pip install markdown

--- a/pastebin/guest/templates/post.html
+++ b/pastebin/guest/templates/post.html
@@ -8,23 +8,12 @@
 
     <div class="container">
         <h1 class="text-center">{{ data.title }}</h1>
-        <article id="post-body">
-            {{ data.body }}
+        <article id="post-body">          
+            {% autoescape off %}
+                {{ rendered_post }}    
+            {% endautoescape %}   
         </article>
     </div>
         
 {% endblock content %}
-
-
-{% block footer %}
-    <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.0/dist/showdown.min.js"></script>
-    <script>
-        var converter = new showdown.Converter();
-        var target = document.getElementById('post-body');
-        var text = target.innerText;
-        var html = converter.makeHtml(text);
-        target.innerHTML = html;
-    </script>
-{% endblock footer %}
-    
-    
+   
