--- a/pastebin/user/templates/user_home.html
+++ b/pastebin/user/templates/user_home.html
@@ -25,9 +25,14 @@
                         <span class="badge badge-danger">Private</span>
                         {% endif %}
 
-                        <a href="{% url 'user_delete_post' id=d.id %}" style="float:right;" onclick="return confirm('Do you want to delete this item?')">
-                            <span class="fa fa-trash text-danger"></span>
-                        </a>
+                        <div class="btn-group" style="float:right">
+                            <a href="{% url 'user_edit_post' id=d.id %}" class="btn btn-success">
+                                <span class="fa fa-edit"></span>
+                            </a>
+                            <a href="{% url 'user_delete_post' id=d.id %}" class="btn btn-danger" onclick="return confirm('Do you want to delete this item?')">
+                                <span class="fa fa-trash"></span>
+                            </a>
+                        </div>
                     </button>
                 </h2>
             </div>
