--- a/pastebin/user/templates/user_edit_post.html
+++ b/pastebin/user/templates/user_edit_post.html
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6 offset-sm-3">
-                <form method="post">
+                <form method="post" enctype="multipart/form-data">
                     {{ form.as_p }}
                     {% csrf_token %}
                     <button type="submit" class="btn btn-success btn-block">Update</button>
