Fixed featured image missing error in post update

--- a/pastebin/guest/templates/post.html
+++ b/pastebin/guest/templates/post.html
@@ -8,6 +8,9 @@
 
     <div class="container">
         <h1 class="text-center">{{ data.title }}</h1>
+        <div class="img-fluid">
+            <img src="{{ MEDIA_URL  }}/{{ data.featured_image }}" alt="">
+        </div>
         <article id="post-body">          
             {% autoescape off %}
                 {{ rendered_post }}    
