--- a/pastebin/guest/templates/post.html
+++ b/pastebin/guest/templates/post.html
@@ -15,6 +15,10 @@
                 <img src="{{ data.featured_image.url }}" alt="">
             </div>
         </div>
+        <div style="background-color: #eeeeee; padding: 10px; border-radius: 5px; border: 1px solid #c3c3c3;" class="mt-5">
+        <b class="fa fa-user"> Published By: </b>{{ data.created_by }} | 
+        <b class="fa fa-clock-o"> On: </b> {{ data.created_on }}
+        </div>
         <article id="post-body" class="mt-5">          
             {% autoescape off %}
                 {{ rendered_post }}    
