--- a/pastebin/guest/templates/post.html
+++ b/pastebin/guest/templates/post.html
@@ -12,7 +12,11 @@
                 <h1 class="text-center">{{ data.title }}</h1>
             </div>
             <div class="col-sm-6">
-                <img src="{{ data.featured_image.url }}" alt="" class="img-fluid">
+                
+                {% if data.featured_image %}
+                    <img src="{{ data.featured_image.url }}" alt="" class="img-fluid">
+                {% endif %}
+                    
             </div>
         </div>
         <div style="background-color: #eeeeee; padding: 10px; border-radius: 5px; border: 1px solid #c3c3c3;" class="mt-5">
